removed insert statements

--- a/Sales_ETL_Job.dbquery.ipynb
+++ b/Sales_ETL_Job.dbquery.ipynb
@@ -29,12 +29,6 @@
     "  product_name STRING\n",
     ") USING DELTA;\n",
     "\n",
-    "INSERT INTO sales.dbo.products VALUES\n",
-    "  (1, 'Electronics', 'Smartphone'),\n",
-    "  (2, 'Electronics', 'Laptop'),\n",
-    "  (3, 'Home', 'Vacuum Cleaner'),\n",
-    "  (4, 'Fashion', 'T-shirt');\n",
-    "\n",
     "-- Create sales_data table\n",
     "CREATE OR REPLACE TABLE sales.dbo.sales_data (\n",
     "  sale_id INT,\n",
@@ -43,13 +37,6 @@
     "  quantity INT,\n",
     "  unit_price DOUBLE\n",
     ") USING DELTA;\n",
-    "\n",
-    "INSERT INTO sales.dbo.sales_data VALUES\n",
-    "  (101, 1, '2025-07-01', 2, 499.99),\n",
-    "  (102, 2, '2025-07-03', 1, 899.99),\n",
-    "  (103, 3, '2025-07-05', 3, 199.99),\n",
-    "  (104, 1, '2025-07-10', 1, 499.99),\n",
-    "  (105, 4, '2025-07-12', 5, 29.99);\n",
     "\n",
     "-- Create or replace view with logic\n",
     "CREATE OR REPLACE VIEW sales.dbo.sales_summary_view AS\n",
@@ -61,6 +48,7 @@
     "FROM sales_data s\n",
     "JOIN products p ON s.product_id = p.product_id\n",
     "WHERE s.quantity > 0 AND s.unit_price > 0\n",
+    "AND s.sale_date >= DATEADD(day, -30, current_date())\n",
     "GROUP BY DATE_TRUNC('month', s.sale_date), p.category;\n",
     "\n",
     "-- Create target table if not exists\n",
@@ -96,6 +84,7 @@
    "inputWidgetPreferences": null,
    "language": "sql",
    "notebookMetadata": {
+    "pythonIndentUnit": 4,
     "sqlQueryOptions": {
      "applyAutoLimit": true,
      "catalog": "sales",
